[metadata]
name = swarm
version = 0.1.0
author = OpenAI Solutions
description = A lightweight, stateless multi-agent orchestration framework.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy==2.1.0
    openai==1.40.0
    pytest==8.3.3
    requests==2.32.3 
    tqdm==4.66.6
    pre-commit==4.0.1
    instructor==1.6.0
python_requires = >=3.1

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
